--- a/src/App.css
+++ b/src/App.css
@@ -110,6 +110,13 @@ margin: 0;
   border: 1px sold;
 } */
 
+.search-box{
+  width: 400px;
+  margin: 20px;
+  height: 40px;
+  border: 1px solid skyblue;
+  padding-left: 20px;
+}
 
 
 @keyframes App-logo-spin {
